ajax for symptom dynamic added

--- a/From_Doccure/templates/common_code/base_code.html
+++ b/From_Doccure/templates/common_code/base_code.html
@@ -218,6 +218,7 @@
 				
 				<!-- Custom JS -->
 				<script  src="{% static 'assets/js/script.js' %}"></script>
+				<script  src="{% static 'assets/js/predict.js' %}"></script>
 				
 			</body>
 		
