--- a/From_Doccure/templates/form/Prediction/prediction.html
+++ b/From_Doccure/templates/form/Prediction/prediction.html
@@ -32,7 +32,7 @@
                                         {% csrf_token %}
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction1</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction1">
+                                              <select class="form-control select_box" id="exampleSelectGender" name="prediction1">
                                                 <option>Select Symptom1</option>
                                                 {% for data_prediction in symptom_data1 %}
                                                 <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
@@ -41,13 +41,20 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction2</label>			
-                                              <select class="form-control" id="exampleSelectGender" name="prediction2">
+                                              <select class="form-control select_box" id="exampleSelectGender" name="prediction2">
                                                 <option>Select Symptom2</option>
                                                 {% for data_prediction in symptom_data2 %}
                                                 <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
                                                 {% endfor %}
                                               </select>
                                         </div>
+                                        <div class="form-group">
+                                          <label for="exampleSelectGender">Select Prediction0</label>			
+                                            <select class="form-control select_box yourSelectBoxId" id="exampleSelectGender" name="prediction2">
+                                              <option>Select Symptom2</option>
+                                              
+                                            </select>
+                                      </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction3</label>			
                                               <select class="form-control" id="exampleSelectGender" name="prediction3">
