--- a/From_Doccure/templates/user/index.html
+++ b/From_Doccure/templates/user/index.html
@@ -55,8 +55,8 @@
                         <div class="right_body_inner">
                             <h2 class="right_title">Get started</h2>
                             <div class="right_btns">
-                                <a href="login.html"><button>Log in</button></a>
-                                <a href="signup.html"><button>Sign up</button></a>
+                                <a href="{% url 'login' %}"><button>Log in</button></a>
+                                <a href="{% url 'signup' %}"><button>Sign up</button></a>
                             </div>
                         </div>
                     </div>
