--- a/From_Doccure/templates/user/login.html
+++ b/From_Doccure/templates/user/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open Ai</title>
+    <title>Login</title>
 
     <!------------ Google font ------------------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
                     <input type="password" name="pass" id="pass" placeholder="Enter Your Password">
                     <button type="submit" class="signup_btn">Continue</button>
                 </form>
-                <p class="under_from">Don't have an account? <a href="signup.html">Sign up</a></p>
+                <p class="under_from">Don't have an account? <a href="{% url 'signup' %}">Sign up</a></p>
                </div>
                <div class="signup_foter">
                 <p class="signup_footer_content">
