--- a/From_Doccure/templates/user/signup.html
+++ b/From_Doccure/templates/user/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open Ai</title>
+    <title>Signup</title>
 
     <!------------ Google font ------------------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +40,7 @@
                     <input type="password" name="con_pass" id="con_pass" placeholder="Enter Confirm Password">
                     <button type="submit" class="signup_btn">Continue</button>
                 </form>
-                <p class="under_from">Already have an account? <a href="login.html">Log in</a></p>
+                <p class="under_from">Already have an account? <a href="{% url 'login' %}">Log in</a></p>
                </div>
                <div class="signup_foter">
                 <p class="signup_footer_content">
