template change on prediction select box

--- a/From_Doccure/templates/form/Prediction/prediction.html
+++ b/From_Doccure/templates/form/Prediction/prediction.html
@@ -41,20 +41,18 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction2</label>			
-                                              <select class="form-control select_box" id="exampleSelectGender" name="prediction2">
+                                              <select class="form-control select_box select_box2" id="exampleSelectGender" name="prediction2">
                                                 <option>Select Symptom2</option>
-                                                {% for data_prediction in symptom_data2 %}
-                                                <option value="{{ data_prediction.id }}">{{ data_prediction }}</option>
-                                                {% endfor %}
+                                                
                                               </select>
                                         </div>
-                                        <div class="form-group">
+                                        <!-- <div class="form-group">
                                           <label for="exampleSelectGender">Select Prediction0</label>			
-                                            <select class="form-control select_box yourSelectBoxId" id="exampleSelectGender" name="prediction2">
+                                            <select class="form-control select_box select_box3" id="exampleSelectGender" name="prediction2">
                                               <option>Select Symptom2</option>
                                               
                                             </select>
-                                      </div>
+                                      </div> -->
                                         <div class="form-group">
                                             <label for="exampleSelectGender">Select Prediction3</label>			
                                               <select class="form-control" id="exampleSelectGender" name="prediction3">
